--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,8 +12,7 @@
     "target": "ES2019",
     "baseUrl": "./",
     "paths": {
-      "@lib/*": ["src/*"],
-      "@globals": ["src/utils/constants/globals.constant.ts"]
+      "@lib/*": ["src/*"]
     }
   }
 }
