--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "sa-sel-gas-library",
-  "version": "0.0.0",
+  "name": "@sa-sel/lib",
+  "version": "1.0.0",
   "private": true,
+  "license": "",
   "scripts": {
     "prepare": "husky install",
     "format": "eslint . --fix --quiet; prettier --write .",
