feat(global): Create BaseProject + Student classes

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -61,12 +61,21 @@
         "default": [
           "decorated-field",
           "private-field",
+          "#private-field",
+          "protected-field",
           "public-field",
           "constructor",
-          "get",
-          "set",
+          "decorated-get",
+          "decorated-set",
           "decorated-method",
+          "public-get",
+          "public-set",
           "public-method",
+          "protected-method",
+          "protected-get",
+          "protected-set",
+          "private-get",
+          "private-set",
           "private-method"
         ]
       }
